# Silent_Log

./: .gitignore  CMakeLists.txt  README.md  TODO.md  log.c  log.cpp  log.h  log.hpp
examples/: example  example.c  simple_example.c
tests/: test_c_log.c  test_cpp_log.cpp
